[project]
name = "comfyui-llm-assistant"
version = "1.2.1"
description = "AI-powered LLM assistant sidebar for ComfyUI — debug, generate, optimize workflows, and build beginner courses using cloud and local LLM providers"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.8"
dependencies = ["aiohttp>=3.8.0"]

[project.urls]
Homepage = "https://github.com/ComfyUI-LLM-Assistant"

[tool.comfy]
PublisherId = "comfyui-llm-assistant"
DisplayName = "ComfyUI LLM Assistant"
Icon = ""
